css/styles.css
/* -------- Base styles --------- */

body {
  margin: 0;
  font-family: "Raleway", sans-serif;
  font-weight: 500;
  height: 100%;
}

html {
  scroll-behavior: smooth;
  height: 100%;
}

.container {
  position: relative;
  overflow: hidden;
  height: 100%;
}

/* html,
body {
  height: 100%;
  box-sizing: border-box;
  margin: 0;
}

body {
  background: url("../assets/img/startsida_eng_jumbotron.jpg") no-repeat;
  background-size: cover;
} */

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: bold;
  margin: 0;
  font-family: "Great Vibes", cursive;
}

h2 {
  margin-bottom: 1rem;
  text-decoration: underline;
}

p {
  margin: 0;
  font-weight: 400;
  font-family: "Raleway", sans-serif;
  line-height: 1.3;
}

.text-block {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  overflow-x: clip;
  text-align: center;
}

.text-block-content {
  padding: 50px;
}

.column-50 {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.current-link {
  border-bottom: 1px solid white;
}

.current-link::before {
  display: none !important;
}

/* ------------ Hamburger menu - mobile ------------- */

#menuToggle {
  display: block;
  position: absolute;
  top: 25px;
  left: 25px;
  z-index: 1;
  -webkit-user-select: none;
  user-select: none;
}

#menuToggle a {
  text-decoration: none;
  color: #ffffff;
  transition: color 0.3s ease;
}

#menuToggle input {
  display: block;
  width: 40px;
  height: 32px;
  position: absolute;
  top: -7px;
  left: -5px;
  cursor: pointer;
  opacity: 0;
  z-index: 2;
  -webkit-touch-callout: none;
}

#menuToggle span {
  display: block;
  width: 33px;
  height: 4px;
  margin-bottom: 5px;
  position: relative;
  background: #ffffff;
  border-radius: 3px;
  z-index: 1;
  transform-origin: 4px -1px;
  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
}

#menuToggle span:first-child {
  transform-origin: 0% 0%;
}

#menuToggle span:nth-last-child(2) {
  transform-origin: 0% 100%;
}

#menuToggle input:checked ~ span {
  opacity: 1;
  transform: rotate(45deg) translate(-2px, -1px);
  background: #ffffff;
}

#menuToggle input:checked ~ span:nth-last-child(3) {
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}

#menuToggle input:checked ~ span:nth-last-child(2) {
  transform: rotate(-45deg) translate(0, -1px);
}

#menu {
  position: absolute;
  width: 100vw;
  margin: -100px 0 0 -25px;
  padding: 48px 0;
  padding-top: 90px;
  background: #122b21;
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  transform-origin: 0% 0%;
  transform: translate(-100%, 0);
  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
  display: flex;
  flex-direction: column;
  align-items: center;
}

#menu li {
  padding: 12px 15px;
  font-size: 22px;
  text-align: center;
}

#menuToggle input:checked ~ ul {
  transform: none;
}

/* ------------ Header ------------- */

.header,
.header-background {
  display: none;
}

.header {
  position: relative;
}

.header-logo {
  font-family: "Great Vibes", cursive;
  color: white;
  font-size: 38px;
  position: absolute;
  left: 50px;
  top: 20px;
  display: flex;
  align-items: center;
}

.header-logo h3 {
  margin: 0px 2px;
  font-weight: normal;
}

.header-logo h3:nth-child(2) {
  font-size: 15px;
}

.links {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 75%;
}

.links a {
  margin: 0 2.5rem;
  color: white;
  text-decoration: none;
  font-family: "Raleway", sans-serif;
  font-weight: 600;
  text-transform: uppercase;
  position: relative;
  padding-bottom: 3px;
}

.links a::before {
  content: "";
  position: absolute;
  display: block;
  width: 100%;
  height: 1px;
  bottom: 0;
  left: 0;
  background-color: white;
  transform: scaleX(0);
  transform-origin: top left;
  transition: transform 0.3s ease;
}

.links a:hover::before {
  transform: scaleX(1);
}

/* ------------ Hero ------------- */

.hero {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  color: white;
  overflow-y: clip;
  background: url("../assets/img/startsida_eng_jumbotron.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 100%;
  font-family: "Great Vibes", cursive;
  /* min-height: 100vh; */
}

.hero-text-container {
  margin-top: 110px;
}

.hero-text {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: white;
  font-size: 95px;
}

.hero-text p {
  margin: 1px;
  font-family: "Great Vibes", cursive;
}

.hero-text p:nth-child(2) {
  font-size: 40px;
}

.hero-text-wedding p,
.hero-text-date p {
  font-family: "Raleway", sans-serif;
  font-weight: 300;
}

.hero-text-wedding {
  margin-bottom: 45px;
  font-size: 18px;
}

.hero-text-date {
  text-align: center;
}

.olli {
  position: absolute;
  height: 175px;
  left: 0;
  bottom: -32px;
  z-index: 1;
}

/* ------------ Where and When ------------- */

.where-and-when {
  padding: 50px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.where-and-when h3 {
  margin: 1rem;
}

.where-and-when-container {
  display: flex;
  flex-direction: column;
  margin-top: 30px;
}

.where-and-when-info {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.where-and-when-container-two {
  margin-top: 0;
}

.wedding,
.party {
  margin-top: 20px;
}

/* ------------ Map ------------- */

#map {
  height: 400px;
  width: 100%;
}

.map {
  position: relative;
  text-align: right;
  height: 18rem;
  margin-top: 55px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.gmap_canvas {
  overflow: hidden;
  background: none !important;
  width: 100%;
}

/* ------------ Dinner and Party ------------- */

.dinner-and-party {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
  overflow-x: clip;
  min-height: 29rem;
}

.dinner-and-party--text h2 {
  margin-bottom: 1rem;
}

.dinner-and-party .flowers-right-corner {
  position: absolute;
  top: -167px;
  right: -370px;
  height: 500px;
  transform: rotate(-67deg) scale(-1);
}

.dinner-and-party .flowers-left-corner {
  position: absolute;
  top: 110px;
  left: -375px;
  height: 500px;
  transform: rotate(128deg) scale(-1);
}

/* ------------ Clothing ------------- */

.clothing img {
  margin-top: 20px;
}

@media (min-width: 1024px) {
}

@media (min-width: 1366px) {
  /* ------------ Base styles ------------- */

  .text-block-content {
    width: 60%;
  }

  .column-50 {
    width: 50%;
  }

  /* ------------ Header ------------- */

  .header {
    display: flex;
    align-items: center;
    justify-content: center;
    position: fixed;
    width: 100%;
    padding: 30px 0;
    z-index: 10;
  }

  .header-background {
    display: block;
    position: fixed;
    height: 84px;
    width: 100%;
    z-index: 9;
    background-color: black;
    opacity: 25%;
  }

  nav {
    display: none;
  }

  /* ------------ Hero ------------- */

  .hero {
    justify-content: center;
  }

  .hero-text-container {
    margin-top: 0px;
  }

  .hero-text {
    flex-direction: row;
    font-size: 120px;
  }

  .hero-text p {
    margin: 14px;
  }

  .olli {
    height: 200px;
  }

  /* ------------ Where and When ------------- */

  .where-and-when-container {
    flex-direction: row;
  }

  .where-and-when-container-two {
    margin-top: 30px;
  }

  .wedding,
  .party {
    margin-top: 0;
  }

  /* ------------ Dinner and Party ------------- */

  .dinner-and-party {
    min-height: 22rem;
  }

  .dinner-and-party .flowers-right-corner {
    top: -175px;
    right: -160px;
    transform: rotate(-66deg) scale(-1);
    z-index: 9;
  }

  .dinner-and-party .flowers-left-corner {
    top: 50px;
    left: -150px;
    transform: rotate(146deg) scale(-1);
    z-index: 9;
  }

  /* ------------ Map ------------- */

  .gmap_canvas {
    width: 50%;
  }

  .map {
    width: 85%;
  }
}

@media (min-width: 1920px) {
  .links a {
    margin: 0 3rem;
  }
}

